--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About-Page</title>
-</head>
-<body>
-<h1>About-Page</h1>
-
-</body>
-</html>
+<h1>About page</h1>
