--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hom Page</title>
-</head>
-<body>
-<h1>HEllo</h1>
-<a href="/about">About-Page</a>
+<h1>Home page</h1>
 
-</body>
-</html>
+<a href="/about">About page</a>
