--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,9 +2,21 @@
     <div class="nav-wrapper">
         <a href="#" class="brand-logo">Courses App</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/">Main</a></li>
-            <li><a href="/courses">Courses</a></li>
-            <li><a href="/add">AddCourse </a></li>
+            {{#if isHome}}
+                <li class="active"><a href="/">Main</a></li>
+            {{else}}
+                <li><a href="/">Main</a></li>
+            {{/if}}
+            {{#if isCurses}}
+                <li class="active"><a href="/courses">Courses</a></li>
+            {{else}}
+                <li><a href="/courses">Courses</a></li>
+            {{/if}}
+            {{#if isAdd}}
+                <li class="active"><a href="/add">AddCourse </a></li>
+            {{else}}
+                <li><a href="/add">AddCourse </a></li>
+            {{/if}}
         </ul>
     </div>
 </nav>
