--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,1 +1,22 @@
 <h1>add Curses</h1>
+<form action="/add" method="post">
+    <div class="input-field">
+        <input id="title" name="title" type="text" class="validate" required>
+        <label for="title">Curs Name</label>
+        <span class="helper-text" data-error="Enter Name"></span>
+    </div>
+
+    <div class="input-field">
+        <input id="price" name="price" type="number" class="validate" required min="1">
+        <label for="price">CPrice</label>
+        <span class="helper-text" data-error="Enter Price"></span>
+    </div>
+
+    <div class="input-field">
+        <input id="img" name="img" type="number" class="validate" required>
+        <label for="img">Img Url</label>
+        <span class="helper-text" data-error="Enter Url Img"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Add Curs</button>
+</form>
