--- a/views/add.hbs
+++ b/views/add.hbs
@@ -13,7 +13,7 @@
     </div>
 
     <div class="input-field">
-        <input id="img" name="img" type="number" class="validate" required>
+        <input id="img" name="img" type="text" class="validate" required>
         <label for="img">Img Url</label>
         <span class="helper-text" data-error="Enter Url Img"></span>
     </div>
