rendering course cards

--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,14 +1,14 @@
-<h1>add Curses</h1>
+<h1>add Courses</h1>
 <form action="/add" method="post">
     <div class="input-field">
         <input id="title" name="title" type="text" class="validate" required>
-        <label for="title">Curs Name</label>
+        <label for="title">Courses Name</label>
         <span class="helper-text" data-error="Enter Name"></span>
     </div>
 
     <div class="input-field">
         <input id="price" name="price" type="number" class="validate" required min="1">
-        <label for="price">CPrice</label>
+        <label for="price">Price</label>
         <span class="helper-text" data-error="Enter Price"></span>
     </div>
 
@@ -18,5 +18,5 @@
         <span class="helper-text" data-error="Enter Url Img"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Add Curs</button>
+    <button type="submit" class="btn btn-primary">Add Courses</button>
 </form>
