--- a/public/index.css
+++ b/public/index.css
@@ -16,10 +16,17 @@
 .course h1 {
     margin-bottom: 2rem;
 }
-.course img{
+
+.course img {
     max-width: 600px;
     height: auto;
 }
-.course .price.big{
-font-size: 2.5rem;
+
+.course .price.big {
+    font-size: 2.5rem;
+}
+.card-action.actions{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
