--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -12,10 +12,14 @@
                         <span class="card-title">{{title}}</span>
                         <p class="price">{{price}}</p>
                     </div>
-                    <div class="card-action">
+                    <div class="card-action actions">
                         <a href="/courses/{{id}}" target="_blank">Open Course</a>
                         <a href="/courses/{{id}}/edit?allow=true">
                             Edit Course</a>
+                        <form action="/card/add" method="POST">
+                            <input type="hidden" name="id" value="{{id}}">
+                            <button type="submit">Buy Curse</button>
+                        </form>
                     </div>
                 </div>
             </div>
