--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -18,7 +18,7 @@
                             Edit Course</a>
                         <form action="/card/add" method="POST">
                             <input type="hidden" name="id" value="{{id}}">
-                            <button type="submit">Buy Curse</button>
+                            <button type="submit" class="btn btn-primary">Buy Curse</button>
                         </form>
                     </div>
                 </div>
